--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,26 +2,25 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}BirdSafari{% endblock %}</title>
     {% block css %}
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
         <link href="{{ asset('css/mainStyle.css') }}" rel="stylesheet">
     {% endblock %}
-    <link rel="icon" type="image/x-icon" href="{{ asset('web/img/apple-touch-icon.png') }}" />
+    <link rel="icon" type="image/x-icon" href="{{ asset('img/apple-touch-icon.png') }}" />
 </head>
 <body>
 <div class="container-fluid">
 
-    <nav class="row navbar navbar-default" role="navigation">
+    <nav class="navbar navbar-default" role="navigation">
 
         <div class="navbar-header">
+            <p class="navbar-brand"><img src="apple-touch-icon.png" alt="Logo du site: Bird Safari"></p></div>
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menuPrincipal">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-            <p class="navbar-brand"><img src="apple-touch-icon.png" alt="Logo du site: Bird Safari"></p></div>
         <div class="collapse navbar-collapse" id="menuPrincipal">
             <ul class="nav navbar-nav navbar-right">
 
@@ -30,45 +29,25 @@
                         <span class="glyphicon glyphicon-home"></span> Accueil
                     </a>
                 </li>
+
+
                 <li>
-                    <a href="{{ path('birds_observations') }}" class="text-center"> <!---->
-                        Observations
-                    </a>
-                </li>
+                    <a href="#" class="text-center">
+                        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                            {{ app.user.username }}<!--Liste déroulante-->
 
-
-
-
-                {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-                    <li class="dropdown">
-                        <a class="dropdown-toggle text-center" data-toggle="dropdown" href="#">
-                            <span class="glyphicon glyphicon-user"></span> Bienvenue {{ app.user.username }} <span class="caret"></span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="{{ path('fos_user_profile_show') }}" class="text-right">Profil</a></li>
-                            {% if not is_granted("ROLE_ADMIN") %}<li><a href="#obsOuNaturalisation" class="text-right">En attente</a></li>{% endif %}
-                            {% if is_granted("ROLE_NATURALIST") %}<li><a href="#" class="text-right"> Mes articles</a></li>{% endif %}
-                            <li><a href="{{ path('fos_user_security_logout') }}" class="text-right">Déconnexion</a></li>
-                            {% if is_granted("ROLE_ADMIN") %} <li><a href="#" class="text-center">Administration</a></li> {% endif %}
-                        </ul>
-
-                    </li>
-
-                {% else %}
-                    <li>
-                        <a href="{{ path('fos_user_security_login') }}" class="text-center">
+                        {% else %}
                             Connexion
-                        </a>
-                    </li>
-                {% endif %}
-                <li>
-                    <a href="{{ path('mission') }}" class="text-center">
-                        Blog
+                        {% endif %}
                     </a>
                 </li>
-
-
-
+                {% if is_granted("ROLE_ADMIN") %}
+                <li>
+                    <a href="#" class="text-center">
+                        Administration
+                    </a>
+                </li>
+                {% endif %}
                 <li>
                     <a href="{{ path('mission') }}" class="text-center">
                         Notre mission
@@ -79,27 +58,16 @@
         </div>
     </nav>
 </div>
-    {% for flashM in app.session.flashbag.get("success") %}
-        <p class="flash-success">
-            {{ flashM }}
-        </p>
-    {% endfor %}
-    {% for flashM in app.session.flashbag.get("error") %}
-        <p class="flash-error">
-            {{ flashM }}
-        </p>
-    {% endfor %}
 
-    <div id="content">
+
     {% block body %}{% endblock %}
-    </div>
-    <footer class="container-fluid bg-foot">
-        <h2>piedPage</h2>
-        {% block foot %}{% endblock %}
-    </footer>
+
+<footer>
+    {% block foot %}{% endblock %}
+</footer>
 
 {% block js %}
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="{{ asset('js/jquery/jquery-3.2.1.min.js') }}"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 {% endblock %}
 
