--- a/src/Birds/ObservationsBundle/Resources/views/Observations/modifierObservation.html.twig
+++ b/src/Birds/ObservationsBundle/Resources/views/Observations/modifierObservation.html.twig
@@ -51,8 +51,8 @@
 	<script src={{ asset("js/observations/creerObservation.js") }}></script>
 	<script src={{ asset("js/observations/positionSelector.js") }}></script>
 
-	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-	<script src={{ asset("js/observations/autocompleteBirds.js") }}></script>
+<!--	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+	<script src={{ asset("js/observations/autocompleteBirds.js") }}></script>-->
 
 {% endblock %}
 
